--- a/iOS-Manager/MusicBox-Manager/en.lproj/MainStoryboard.storyboard
+++ b/iOS-Manager/MusicBox-Manager/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="3Fv-YY-Fk2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="3Fv-YY-Fk2">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
@@ -238,8 +238,8 @@
                         <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="FDv-XL-Uxi"/>
                     </toolbarItems>
                     <navigationItem key="navigationItem" title="Device Name" id="PpL-R2-Xol">
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="pUA-Qw-FVx">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" id="AM5-ZZ-Q5n">
+                        <barButtonItem key="rightBarButtonItem" enabled="NO" style="plain" id="pUA-Qw-FVx">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" id="AM5-ZZ-Q5n">
                                 <rect key="frame" x="730" y="11" width="22" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
@@ -259,6 +259,7 @@
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <connections>
                         <outlet property="deviceCollectionView" destination="gPw-vu-AI4" id="T9r-g9-oDQ"/>
+                        <outlet property="infoButton" destination="pUA-Qw-FVx" id="ASb-nc-BCP"/>
                         <outlet property="trackCollectionView" destination="1tI-8q-cd8" id="oX9-Vr-UlB"/>
                     </connections>
                 </viewController>
@@ -271,7 +272,7 @@
             <objects>
                 <tableViewController id="Vs2-4q-nb7" customClass="SettingsViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="gxF-Np-c0i">
-                        <rect key="frame" x="0.0" y="44" width="350" height="564"/>
+                        <rect key="frame" x="0.0" y="44" width="350" height="784"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <sections>
@@ -391,7 +392,7 @@
             <objects>
                 <tableViewController id="iPe-H3-gdT" customClass="SelectThemeViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Ty6-1d-huc">
-                        <rect key="frame" x="0.0" y="44" width="350" height="388"/>
+                        <rect key="frame" x="0.0" y="44" width="350" height="696"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
